# cuda-kernels

./: .gitignore  CMakeLists.txt  README.md  first_cuda_opeartor.cu  matmul_operator.cu
.github/workflows/: spell-check.yml
docs/: BUG.md  attention.md  conv2d.md  matmul.md
include/: common.h  dtype.h  harness.h  memory.h  parser.h  registry.h
include/conv2d/: defines.h  func.h
include/elementwise_mul/: defines.h  func.h
include/kernels/: attention.h  conv2d.h  elementwise_mul.h  matmul.h  softmax.h
include/utils/: ops.cuh  ptx.cuh  reduce.cuh  swizzle.cuh  timer.cuh
scripts/: attn_bench.py  conv2d_bench.py  matmul_bench.py
src/: parser.cpp
src/attention/: cublas.cu  flash_v1.cu  flash_v2.cu  flash_v2_mma.cu  flash_v3.cu  native.cu  verify.cu
src/conv2d/: implgemm.cu  native.cu  verify.cu  winograd.cu
src/elementwise_mul/: impl.cu  native.cu  vector.cu  verify.cu
src/matmul/: cublas.cu  mma.cu  native.cu  tiled.cu  tiled_dbuf.cu  tiled_v1.cu  tiled_v2.cu  tiled_v3.cu  verify.cu  wmma.cu
src/softmax/: native.cu  smem.cu
src/utils/: reduce_ops.cu
tests/: test_conv2d.cu  test_elementwise_mul.cu  test_matmul.cu  test_sdpa_attn.cu  test_softmax.cu
